SourceOrg/src/objects/Source_Organization__c.object
<CustomObject>
    <fields>
        <fullName>ResearchersWith_NonKU_Relationship__c</fullName>
        <defaultValue>0</defaultValue>
        <description># KU faculty with a non-KU relationship with the Company.</description>
        <inlineHelpText># KU faculty with a non-KU relationship with the Company.</inlineHelpText>
        <label># ResearchersWith NonKU Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBIR_STTR_Proposals_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <label># SBIR STTR Proposals Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBIR_STTR_Proposals_Not_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <label># SBIR STTR Proposals Not Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBIR_STTR_Proposals__c</fullName>
        <defaultValue>0</defaultValue>
        <description># SBIR STTR Proposals Applied</description>
        <inlineHelpText># SBIR STTR Proposals Applied</inlineHelpText>
        <label># SBIR STTR Proposals Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_KU_Division__c</fullName>
        <description>The KU Division that the data is received from</description>
        <inlineHelpText>The KU Division that the data is received from</inlineHelpText>
        <label>Source Organization Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center For Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Partnerships</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_System_Created_Date__c</fullName>
        <description>Created date in the source system.</description>
        <inlineHelpText>Created date in the source system.</inlineHelpText>
        <label>Source System Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System_Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Source System is deleted in the source system.</description>
        <label>Source System Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System_Last_Modified_Date__c</fullName>
        <description>Last modified date in the source system.</description>
        <inlineHelpText>Last modified date in the source system.</inlineHelpText>
        <label>Source System Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source system from where this Organization&apos;s (Account) data was received</description>
        <inlineHelpText>Choose from the list of Source Systems to indicate where this data was received from</inlineHelpText>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reggie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symplicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Entry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StateORProvince__c</fullName>
        <description>Address For Communication - State/Province</description>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_SO_Contacts__c</fullName>
        <label>Total # SO Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Source Organization Website</description>
        <label>Website</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_Code__c</fullName>
        <description>Address for communication - Zip Code</description>
        <label>ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Jobs_posted__c</fullName>
        <label># Of Jobs Posted</label>
        <summaryFilterItems>
            <field>Interaction__c.Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Job Posting</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Source_Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Sponsored_Research_Awards__c</fullName>
        <label># Of Sponsored Research Awards</label>
        <summaryFilterItems>
            <field>Interaction__c.Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Research Grant</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Source_Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_career_fair_events__c</fullName>
        <label># Of Career Fair Events</label>
        <summaryFilterItems>
            <field>Interaction__c.Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Event - Career Services</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Source_Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_internships__c</fullName>
        <label># Of Internships</label>
        <summaryFilterItems>
            <field>Interaction__c.Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Internship</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Source_Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_licenses_executed__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Licenses Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_service_agreements__c</fullName>
        <label># Of Service Agreements</label>
        <summaryFilterItems>
            <field>Interaction__c.Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Service Agreement</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Source_Organization__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_workshops__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Workshops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Source Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Source Organizations</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Primary_Source_Organizations</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Source_Org__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Primary Source Organizations</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KU_Read_Only_Profile</group>
            <group>KU_User_Profile</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Source_Center_for_Research</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_KU_Division__c</field>
            <operation>equals</operation>
            <value>Center For Research</value>
        </filters>
        <label>Source = Center for Research</label>
    </listViews>
    <listViews>
        <fullName>Source_Continuing_Education</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_KU_Division__c</field>
            <operation>equals</operation>
            <value>Continuing Education</value>
        </filters>
        <label>Source = Continuing Education</label>
    </listViews>
    <listViews>
        <fullName>Source_Endowment</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <columns>Endowment_KnownAlumniCount__c</columns>
        <columns>Endowment_KnownNonAlumniCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_KU_Division__c</field>
            <operation>equals</operation>
            <value>Endowment</value>
        </filters>
        <label>Source = Endowment</label>
    </listViews>
    <listViews>
        <fullName>Source_Manual_Entry</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_KU_Division__c</field>
            <operation>equals</operation>
            <value>Manual Entry</value>
        </filters>
        <label>Source = Manual Entry</label>
    </listViews>
    <listViews>
        <fullName>Source_Technology_Transfer</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_KU_Division__c</field>
            <operation>equals</operation>
            <value>Technology Transfer</value>
        </filters>
        <label>Source = Technology Transfer</label>
    </listViews>
    <listViews>
        <fullName>Source_University_Career_Center</fullName>
        <columns>NAME</columns>
        <columns>Master_Organization__c</columns>
        <columns>Source_KU_Division__c</columns>
        <columns>Source_System__c</columns>
        <columns>Organization_Source_System_ID__c</columns>
        <columns>Source_System_Created_Date__c</columns>
        <columns>City__c</columns>
        <columns>StateORProvince__c</columns>
        <columns>ZIP_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_KU_Division__c</field>
            <operation>equals</operation>
            <value>Career Services</value>
        </filters>
        <label>Source = University Career Center</label>
    </listViews>
    <nameField>
        <label>Source Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Organizations</pluralLabel>
    <recordTypes>
        <fullName>Excluded</fullName>
        <active>true</active>
        <description>Not visible by anyone but admins. Allows for matching when importing without having to use Exclude List.</description>
        <label>Excluded</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_SO</fullName>
        <active>true</active>
        <label>Standard SO</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_One_Primary_Source_Per_Master</fullName>
        <active>true</active>
        <description>Validation to ensure only one Primary SourceOrg per MasterOrg exists</description>
        <errorConditionFormula>AND(ISCHANGED(Primary_Source_Org__c),Master_Organization__r.Primary_Source_Org_Count__c =1,Primary_Source_Org__c = True)</errorConditionFormula>
        <errorMessage>Primary SourceOrganization already exists for this MasterOrganization. If you want to select this as the PrimarySource, please uncheck the &quot;Primary&quot; checkbox from the current PrimarySource</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SourceOrgOwner_CannotChange</fullName>
        <active>true</active>
        <description>To ensure that Only System Administrator Can Change The Source Organization Owner.</description>
        <errorConditionFormula>AND(!($Profile.Name == &apos;System Administrator&apos;),
OR($Profile.Name == &apos;System Administrator Clone&apos;),
ISCHANGED(Source_KU_Division__c),
ISCHANGED(Master_Organization__c)
)</errorConditionFormula>
        <errorMessage>Only System Administrator Can Change The Source Organization Owner/Master Organization - Please Contact Your System Administrator</errorMessage>
    </validationRules>
</CustomObject>